--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Temperature convertor</title>
         <meta charset="UTF-8">
         <meta name="viewport"content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="task3.css" >
+        <link rel="stylesheet" href="index.css" >
         
        
     </head>
@@ -21,6 +21,6 @@
                 <label>celsius</label>
             </div><br><br>
        </div>
-       <script src="task3.js"></script>
+       <script src="index.js"></script>
     </body>
 </html>
